<resources>
    <string name="app_name">Android Task</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="no_internet">No Internet Access</string>
    <string name="search_hint">Search</string>
    <string name="you_are_in">You are in</string>
    <string name="misr_al_gadida_egypt">Misr Al Gadida - Egypt</string>
    <string name="hotspots">Hotspots</string>
    <string name="view_all">View all</string>
    <string name="event">Events</string>
    <string name="attractions">Attractions</string>
</resources>
